# End-to-End-DevOps-Pipeline-for-ROS2-Applications

./: .gitignore  Dockerfile  LICENSE  README.md  action.yaml  adopipeline.yaml  azure-pipelines-Application.yml  azure-pipelines.yml  docker-compose.yml  final_product.sh  infra-pipeline.yml  requirements.txt
app/: auth.py  config.py  main.py  metrics.py  ros_node.py
app/ros2_ws/src/hello_ros2/: package.xml  setup.py
app/ros2_ws/src/hello_ros2/hello_ros2/: listener.py  talker.py
app/routes/: api.py  web.py
app/templates/: dashboard.html  login.html
argocd/: dev-app.yaml  prod-app.yaml
docker/: Dockerfile  entrypoint.sh
envs/dev/: values.yaml
envs/prod/: values.yaml
helm/rudra-app/: Chart.yaml  values.yaml
helm/rudra-app/templates/: deployment.yaml  ingress.yaml  service.yaml  servicemonitor.yaml
infra/: README.md  folder_scructure.sh
infra/envs/dev/: main.tf  provider.tf  terraform.tfvars  variables.tf
infra/global/backend/: backend.tf
infra/modules/acr/: main.tf  outputs.tf  variables.tf
infra/modules/aks/: main.tf  outputs.tf  variables.tf
infra/modules/key_vault/: main.tf  outputs.tf  variables.tf
infra/modules/log_analytics/: main.tf  outputs.tf  variables.tf
infra/modules/networking/: main.tf  outputs.tf  variables.tf
infra/modules/public_ip/: main.tf  variables.tf
infra/modules/resource_group/: main.tf  (+2 more)
k8s/: configmap.yaml  deployment.yaml  grafana.yaml  ingress.yaml  k8s-deployment.yaml  prometheus-deployment.yaml  service.yaml  servicemonitor.yaml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
(+2 files in other folders)
